--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
 /* End Special fonts */
 /* Start General */
 .content {
-    animation: contentColor 5s ease-in forwards;
-    animation-iteration-count:infinite;
+    /* animation: contentColor 5s ease-in forwards; */
+    /* animation-iteration-count:infinite; */
     height: 100vh;
+    background-color: #056f77;
 }
 .title {
     font-family:
@@ -36,13 +37,13 @@
         color: #999999;
     }
     20% {
-        color: #ffffff;
+        color: #4cc0c6;
     }
     40% {
-        color: #e5e5e5;
+        color: #12b8c1;
     }
     60% {
-        color: #fca311;
+        color: #056461;
     }
     80% {
         color: #14213d;
@@ -60,17 +61,17 @@
     20% {
         background-color: #14213d;
     }
-    40% {
-        background-color: #fca311;
+   100% {
+        background-color: #025392;
     }
     60% {
-        background-color: #e5e5e5;
+        background-color: #056f77;
     }
     80% {
-        background-color: #ffffff;
+        background-color: #033b42;
     }
     100% {
-        background-color: #999999;
+        background-color: #003369;
     }
 
 }
